--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+    <script type="text/javascript" src="../path/to/flowbite/dist/flowbite.min.js"></script>
   </body>
 
 </html>
